--- a/Notebook2_starter.ipynb
+++ b/Notebook2_starter.ipynb
@@ -50,24 +50,24 @@
           "height": 532
         },
         "id": "b49CLo7pXyXm",
-        "outputId": "4acbbb01-65a5-4690-df6a-690958da9d3c"
+        "outputId": "07f3fce3-a04d-4d66-d809-8100c78ea694"
       },
       "source": [
         "import pandas\n",
-        "import numpy\n",
+        "import numpy as np\n",
         "from google.colab import drive \n",
         "drive.mount('/content/drive')\n",
         "data = pandas.read_csv('/content/drive/MyDrive/datasets/vehicles.csv')\n",
         "pandas.set_option('display.max_columns', 100)\n",
         "data.head()"
       ],
-      "execution_count": 1,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         },
         {
@@ -175,7 +175,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f9f293ca-9dcb-410f-a931-c9ae96b4ee4b\">\n",
+              "  <div id=\"df-213891e2-a17a-4730-96c6-ddb2bc8e9f35\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -714,7 +714,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f9f293ca-9dcb-410f-a931-c9ae96b4ee4b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-213891e2-a17a-4730-96c6-ddb2bc8e9f35')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -765,12 +765,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f9f293ca-9dcb-410f-a931-c9ae96b4ee4b button.colab-df-convert');\n",
+              "          document.querySelector('#df-213891e2-a17a-4730-96c6-ddb2bc8e9f35 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f9f293ca-9dcb-410f-a931-c9ae96b4ee4b');\n",
+              "          const element = document.querySelector('#df-213891e2-a17a-4730-96c6-ddb2bc8e9f35');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -793,7 +793,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 41
         }
       ]
     },
@@ -845,10 +845,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "7Gdp7s4rbCb3",
-        "outputId": "041269f3-0225-47bc-874d-6f0667e26746",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "outputId": "8e6839d7-eed4-45c5-b866-8ccbd1bfad3f"
       },
       "source": [
         "# remove missing data here\n",
@@ -859,7 +860,7 @@
         "\n",
         "right_subset.cylinders.value_counts(dropna=False) \n",
         "#will do mode, since cylinders are a whole number we don't want a decimal here\n",
-        "cylinders_mode = right_subset['cylinders'].mode()\n",
+        "cylinders_mode = int(right_subset['cylinders'].mode())\n",
         "right_subset['cylinders'].fillna(cylinders_mode, inplace = True)\n",
         "\n",
         "right_subset.year.value_counts(dropna=False) \n",
@@ -868,35 +869,168 @@
         "right_subset.comb08.value_counts(dropna=False) \n",
         "#no na's\n",
         "\n",
-        "right_subset.cylinders.value_counts(dropna=False)"
+        "right_subset.head()"
       ],
-      "execution_count": 36,
+      "execution_count": 39,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'pandas.core.series.Series'>\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "4.0     12523\n",
-              "6.0      9112\n",
-              "8.0      4503\n",
-              "5.0       442\n",
-              "3.0       203\n",
-              "12.0       40\n",
-              "2.0        29\n",
-              "10.0        8\n",
-              "NaN         3\n",
-              "Name: cylinders, dtype: int64"
+              "   displ  cylinders  year  comb08\n",
+              "0    2.0        4.0  1985      21\n",
+              "1    4.9       12.0  1985      11\n",
+              "2    2.2        4.0  1985      27\n",
+              "3    5.2        8.0  1985      11\n",
+              "5    1.8        4.0  1993      22"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-95279e5b-e1c5-499f-9e08-727640240425\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>displ</th>\n",
+              "      <th>cylinders</th>\n",
+              "      <th>year</th>\n",
+              "      <th>comb08</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>1985</td>\n",
+              "      <td>21</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>4.9</td>\n",
+              "      <td>12.0</td>\n",
+              "      <td>1985</td>\n",
+              "      <td>11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2.2</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>1985</td>\n",
+              "      <td>27</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>5.2</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>1985</td>\n",
+              "      <td>11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>1.8</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>1993</td>\n",
+              "      <td>22</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-95279e5b-e1c5-499f-9e08-727640240425')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-95279e5b-e1c5-499f-9e08-727640240425 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-95279e5b-e1c5-499f-9e08-727640240425');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 39
         }
       ]
     },
@@ -906,7 +1040,9 @@
         "id": "qzo5ZFxybi5o"
       },
       "source": [
-        "### Describe what you did:\n"
+        "### Describe what you did:\n",
+        "I used the mean of displ to replace na's with the average\n",
+        "For cylinders I used mode since we need a whole number, i have to use int instead of float or it wouldn't replace the NaN's\n"
       ]
     },
     {
@@ -927,9 +1063,26 @@
         "id": "oi5Q3-9SblvZ"
       },
       "source": [
-        "# Build your function here"
+        "# Build your function here\n",
+        "def kNN(new, data, k):\n",
+        "    # write your code in here to make this function work\n",
+        "    data_copy = data.copy()\n",
+        "    # 1. calculate distances\n",
+        "    data_copy['distance_to_new'] = np.sqrt(\n",
+        "      (new['displ'] - data_copy['displ'])**2 \n",
+        "      +(new['cylinders'] - data_copy['cylinders'])**2 \n",
+        "      +(new['year'] - data_copy['year'])**2)\n",
+        "    \n",
+        "    \n",
+        "    # 2. sort\n",
+        "    sorted_data = data_copy.sort_values(['distance_to_new'])\n",
+        "    \n",
+        "    # 3. predict\n",
+        "    prediction = sorted_data.iloc[0:k]['comb08'].median()\n",
+        "\n",
+        "    return prediction\n"
       ],
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -945,13 +1098,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "51TOP3akb_T8"
+        "id": "51TOP3akb_T8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "db485f5b-59bf-43eb-f0c1-2ba132feed54"
       },
       "source": [
-        "# demonstrate that your function works here\n"
+        "chevy = {}\n",
+        "chevy['displ'] = 4.0\n",
+        "chevy['cylinders'] = 3.0\n",
+        "chevy['year'] = 2008\n",
+        "\n",
+        "kNN(chevy, right_subset, 9)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
     },
     {
       "cell_type": "markdown",
